--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+::selection {
+  background: #2b00ff;
+  color: #fff;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Poppins";
+  background: linear-gradient(to right, #1400ff, #4200ff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input {
+  padding: 15px;
+  border: 2px solid #ddd;
+  margin-bottom: 10px;
+}
+
+input,
+button {
+  font-family: "Poppins";
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+h1 {
+  margin: 0 0 50px;
+  font-weight: 500;
+}
+
+.btn {
+  width: 100px;
+  height: 50px;
+  color: #fff;
+  border: none;
+  background: linear-gradient(to right, #1400ff, #4200ff);
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  margin: 50px 5px 0;
+  transition: 0.2s ease-in;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  transition: 0.2s ease-in;
+  transform: scaleX(1.05);
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
 }
